--- a/assets/css/lion.css
+++ b/assets/css/lion.css
@@ -43,17 +43,17 @@ canvas {
 
 .lion {
   background-color: orange;
-  height: 40px;
-  width: 40px;
+  height: 125px;
+  width: 125px;
   position: absolute;
   left: 50%;
-  top: 50%;
+  bottom: 0;
   -webkit-transition: all 1s;
   transition: all 1s;
-  -webkit-transform: translateY(0) translateX(-50%) scale(1);
-          transform: translateY(0) translateX(-50%) scale(1);
+  -webkit-transform: translateY(0) translateX(-50%);
+          transform: translateY(0) translateX(-50%);
 }
 .lion.show {
-  -webkit-transform: translateY(-100%) translateX(-50%) scale(3);
-          transform: translateY(-100%) translateX(-50%) scale(3);
+  -webkit-transform: translateY(-125%) translateX(-50%);
+          transform: translateY(-125%) translateX(-50%);
 }
