--- a/assets/css/lion.css
+++ b/assets/css/lion.css
@@ -1,30 +1,34 @@
 html,
 body {
   height: 100%;
-  background-image: url("../images/safari-bg.jpg");
+  background-image: url("../images/background-taronga.svg");
+  background-size: cover;
   margin: 0;
 }
 
 canvas {
-  /*width: 100%;
-  height: auto;*/
+  /*width: 100%;*/
+  /*height: auto;*/
   position: absolute;
   bottom: 0;
 }
 
+.logo-container { padding: 16px; }
+.rfid-logo { width: 5%; float: right;}
+.t-logo { width: 14%; }
+
 .lion {
-  background-color: orange;
-  height: 125px;
-  width: 125px;
+  /*background-color: orange;*/
+  /*height: 125px;*/
+  width: 15%;
   position: absolute;
   bottom: 0;
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  -webkit-transition: all 1s;
+  transition: all 1s;
   animation-fill-mode: forwards;
-  animation: move 5s linear infinite;
+  animation: move 10s linear infinite;
   -webkit-transform: translateY(0);
           transform: translateY(0);
-
 }
 
 @keyframes move {
@@ -36,8 +40,7 @@ canvas {
 }
 
 .lion.show {
-  -webkit-transform: translateY(-125%);
-          transform: translateY(-125%);
-  /*animation-fill-mode: forwards;*/
+  -webkit-transform: translateY(-95%);
+          transform: translateY(-95%);
   animation-play-state: paused;
 }
