--- a/styles/horses.scss
+++ b/styles/horses.scss
@@ -3,9 +3,23 @@
 html { box-sizing: border-box;}
 html *, html *::before, html *::after {box-sizing: inherit; }
 
-.intro{position: absolute;width:100vw;height:100vh;top:0%;}
+body{background:url("../images/horse_bg.png") no-repeat center center;background-size:cover;font-family: "Josefin Sans", sans-serif;font-size:20px}
+
+
+
+[data-hidden]{transition: opacity .4s}
+[data-hidden="true"]{opacity: 0;pointer-events:none}
+[data-hidden="false"]{opacity: 1;}
+
+.intro{position: absolute;width:100vw;height:45vh;z-index:10;padding-top:55vh;color:#fff;text-align:center;}
+.intro :nth-child(1){max-width:50%;margin:0 auto 5%;line-height:20px;}
+.intro :nth-child(2){font-size:larger;max-width:50%;margin:0 auto 5%;line-height:20px;}
+.intro :nth-child(3){font-size:smaller;max-width:50%;margin:0 auto 2%;line-height:25px;}
+.intro button{background:none;border:1px solid white;border-radius:5px;color:white;padding: 10px 30px;text-transform:uppercase;cursor:pointer}
+.intro button:hover{background:rgba(white,.2)}
+
 .winner{position: absolute;width:100vw;height:100vh;top:0%;}
-.scene{background: url("../images/horse_bg.png") no-repeat center center;background-size:cover;height:100vh;width:100vw;}
+.scene{height:100vh;width:100vw;}
 .horses{position: absolute;width:100vw;height:60vh;top:36%;}
 // .finishLine{position: absolute;left:50%;top:13vh;width:10vw;height:70vh;}
 .horses > div{position: absolute;left:0;width: 100%;height:12vh;transition:all 1s}
@@ -17,3 +31,9 @@ html *, html *::before, html *::after {box-sizing: inherit; }
 .r{top:40%;& svg{height:100%;width:auto} & .horseColor{fill:rgba(green, 1)}}
 .t{top:50%;& svg{height:100%;width:auto} & .horseColor{fill:rgba(purple, 1)}}
 .y{top:60%;& svg{height:100%;width:auto} & .horseColor{fill:rgba(cyan, 1)}}
+
+
+.winner{position: absolute;width:100vw;height:45vh;z-index:11;padding-top:55vh;color:#fff;text-align:center;}
+.winner :nth-child(1){max-width:50%;margin:0 auto 5%;line-height:20px;}
+.winner :nth-child(2){font-size:3rem;max-width:50%;margin:0 auto 5%;line-height:20px;}
+#winner{color:orange;}
