--- a/styles/horses.scss
+++ b/styles/horses.scss
@@ -20,7 +20,7 @@ body{background:url("../images/horse_bg.png") no-repeat center center;background
 
 .winner{position: absolute;width:100vw;height:100vh;top:0%;}
 .scene{height:100vh;width:100vw;}
-.horses{position: absolute;width:100vw;height:60vh;top:36%;}
+.horses{position: absolute;width:100vw;height:60vh;top:40%;}
 // .finishLine{position: absolute;left:50%;top:13vh;width:10vw;height:70vh;}
 .horses > div{position: absolute;left:0;width: 100%;height:12vh;transition:all 1s}
 .horses > div svg{transition:all 1s;position: relative;z-index: 1;}
@@ -31,7 +31,7 @@ body{background:url("../images/horse_bg.png") no-repeat center center;background
 .r{top:40%;& svg{height:100%;width:auto} & .horseColor{fill:rgba(green, 1)}}
 .t{top:50%;& svg{height:100%;width:auto} & .horseColor{fill:rgba(purple, 1)}}
 .y{top:60%;& svg{height:100%;width:auto} & .horseColor{fill:rgba(cyan, 1)}}
-
+.t, .y{display: none;}
 
 .winner{position: absolute;width:100vw;height:45vh;z-index:11;padding-top:55vh;color:#fff;text-align:center;}
 .winner :nth-child(1){max-width:50%;margin:0 auto 5%;line-height:20px;}
