--- a/views/horses.pug
+++ b/views/horses.pug
@@ -109,8 +109,8 @@ html
 
 
 	.intro(data-hidden="false")
-		h1 Paper Play !
-		p Get your flyer, pick your horse, smash it, and win !
+		h1 🗒 Paper Play 🕹 !
+		p Get your flyer 📰, pick your horse 🐴, smash it 👇, and win 🏆 !
 		p.
 			Paper Play uses an RFID technology embeded in the paper itself, interaction with touch action.
 			Each horse on the flyer is assigned to a specific RFID tag, that we match to one on screen.
